fixed spacing

--- a/app/assets/stylesheets/pages/_booking.scss
+++ b/app/assets/stylesheets/pages/_booking.scss
@@ -49,3 +49,8 @@
   right: 50%;
   transform: translate(50%, -50%);
 }
+
+.welcome-dashboard {
+  text-align: center;
+  margin-top: 30px;
+}
